--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -3,6 +3,7 @@
   src: url("/fonts/Arimo-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url("/fonts/Arimo-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: block;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url("/fonts/Arimo-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
+  font-display: block;
 }
 
 @font-face {
@@ -24,4 +27,5 @@
   src: url("/fonts/Arimo-Italic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
+  font-display: block;
 }
