--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,6 +1,7 @@
 @import "./fonts.css";
 @import "./typography.css";
 @import "./forms.css";
+@import "./responsive.css";
 
 :root {
   --font: Arimo, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
