--- a/styles/forms.css
+++ b/styles/forms.css
@@ -6,9 +6,14 @@
   margin: 0;
   margin-bottom: var(--gap);
   border-radius: var(--border-radius);
-  border: 1px solid #a9a4c0;
+  border: 2px solid #a9a4c0;
   width: 100%;
   box-sizing: border-box;
+}
+
+.input.is-danger {
+  border-color: #f57070;
+  background-color: #fccfcf;
 }
 
 button {
