--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@
   --colour-text: #fff;
   --colour-indigo: #0e0e2c;
   --colour-primary: #66dabe;
+  --colour-danger: #f12b2c;
 
   --font-size-body: 16px;
   --font-size-button: 14px;
@@ -67,4 +68,8 @@ body {
   box-shadow: 0px 0px 12px rgba(0, 0, 0, 0.25);
   border-radius: 16px;
   padding: 1rem;
+}
+
+p.is-danger {
+  color: var(--colour-danger);
 }
