--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,6 @@
 @import "./fonts.css";
 @import "./typography.css";
 @import "./forms.css";
-@import "./responsive.css";
 
 :root {
   --font: Arimo, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
@@ -72,4 +71,25 @@ body {
 
 p.is-danger {
   color: var(--colour-danger);
+}
+
+@media (max-width: 480px) {
+  html {
+    background-image: none;
+    background-color: #2b2b5c;
+  }
+
+  body {
+    padding: 1rem;
+  }
+
+  .columns {
+    display: block;
+    grid-template-columns: 1fr;
+  }
+
+  h1,
+  .title {
+    font-size: 30px;
+  }
 }
