add privacy policy and terms

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -93,3 +93,8 @@ p.is-danger {
     font-size: 30px;
   }
 }
+
+.buttons a:not(:last-child),
+.buttons button:not(:last-child) {
+  margin-right: var(--gap);
+}
