--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,7 +6,7 @@
   --font: Inter, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 
-  --colour-text: #fff;
+  --colour-text: #1a1a30;
   --colour-indigo: #1a1a30;
   --colour-primary: #4fc6a9;
   --colour-danger: #f12b2c;
@@ -28,14 +28,6 @@ body {
 
   font-size: var(--font-size-body);
   color: var(--colour-text);
-}
-
-html {
-  background-image: url("/background.svg");
-  background-position: center center;
-  background-size: cover;
-  background-repeat: no-repeat;
-  min-height: 100vh;
 }
 
 body {
