--- a/styles/globals.css
+++ b/styles/globals.css
@@ -8,7 +8,7 @@
 
   --colour-text: #1a1a30;
   --colour-indigo: #1a1a30;
-  --colour-primary: #4fc6a9;
+  --colour-primary: #46d5b2;
   --colour-danger: #f12b2c;
 
   --font-size-body: 16px;
@@ -66,11 +66,6 @@ p.is-danger {
 }
 
 @media (max-width: 480px) {
-  html {
-    background-image: none;
-    background-color: #2b2b5c;
-  }
-
   body {
     padding: 1rem;
   }
