--- a/styles/app.scss
+++ b/styles/app.scss
@@ -50,6 +50,9 @@ body {
       font-size: 4rem;
       margin-bottom: 2rem;
       color: var(--colour-neutral-onyx);
+      line-height: 110%;
+
+      letter-spacing: -0.02em;
 
       span {
         color: var(--colour-neutral-light-slate-75);
@@ -60,6 +63,7 @@ body {
       font-size: 1.25rem;
       margin-bottom: 1.5rem;
       line-height: 140%;
+      letter-spacing: -0.02em;
     }
   }
 }
