--- a/styles/app.scss
+++ b/styles/app.scss
@@ -154,6 +154,9 @@ body {
     li {
       list-style: none;
       display: grid;
+      
+      align-items: flex-start;
+      grid-template-rows: auto 1fr 1fr;
 
       padding: 1.5rem 2rem 6rem 2rem;
 
@@ -290,6 +293,8 @@ body {
     li {
       list-style: none;
       display: grid;
+      align-items: flex-start;
+      grid-template-rows: auto auto 1fr;
 
       svg {
         background: #b7e2f7;
