update hero style

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -50,7 +50,8 @@ body {
 
       letter-spacing: -0.02em;
 
-      span {
+      em {
+        font-style: normal;
         color: var(--colour-neutral-light-slate-75);
       }
     }
