--- a/styles/app.scss
+++ b/styles/app.scss
@@ -169,6 +169,11 @@ body {
         width: 2.5rem;
       }
 
+      img {
+        height: 2.5rem;
+        width: 2.5rem;
+      }
+
       strong {
         margin-top: 2.5rem;
         margin-bottom: 1rem;
@@ -297,6 +302,11 @@ body {
         background: #b7e2f7;
         box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.05);
         border-radius: 8px;
+        height: 2.5rem;
+        width: 2.5rem;
+      }
+
+      img {
         height: 2.5rem;
         width: 2.5rem;
       }
