start on eap forms

--- a/styles/app.scss
+++ b/styles/app.scss
@@ -20,386 +20,19 @@ body {
   grid-template-columns: 1fr 1120px 1fr;
 }
 
-.hero {
-  &__container {
-    @include container;
-
-    row-gap: 5rem;
-
-    background-color: var(--colour-secondary--sky-blue-25);
-
-    padding-top: var(--spacing-5);
-    padding-bottom: calc(2 * var(--spacing-5));
-
-    .navbar {
-      grid-column: 2;
-    }
-  }
-
-  &__content {
-    grid-column: 2;
-
-    display: grid;
-    grid-template-columns: 6fr 5fr;
-
-    h1 {
-      font-size: 4rem;
-      margin-bottom: 2rem;
-      color: var(--colour-neutral-onyx);
-      line-height: 110%;
-
-      letter-spacing: -0.02em;
-
-      em {
-        font-style: normal;
-        color: var(--colour-neutral-light-slate-75);
-      }
-    }
-
-    p {
-      font-size: 1.25rem;
-      margin-bottom: 1.5rem;
-      line-height: 140%;
-      letter-spacing: -0.02em;
-    }
-  }
-}
-
-.navbar {
-  background-color: #fff;
-  display: grid;
-  column-gap: var(--spacing-3);
-  grid-template-columns: auto 1fr auto;
-  border-radius: var(--radius);
-  box-shadow: 0px 0px 32px #c8f1ff;
-
-  align-items: center;
-
-  &__brand {
-    padding: var(--spacing-3);
-
-    svg {
-      height: 1.75rem;
-    }
-  }
-
-  &__left {
-    display: grid;
-    grid-auto-flow: column;
-    column-gap: var(--spacing-2);
-    font-weight: 600;
-
-    justify-content: start;
-
-    a {
-      color: var(--colour-text);
-      text-decoration: none;
-    }
-  }
-
-  &__right {
-    padding: var(--spacing-2);
-  }
-}
+@import "../components/index";
 
 .button {
   padding: var(--spacing-2) var(--spacing-3);
   font-weight: bold;
   text-decoration: none;
+  border: none;
+  font-size: inherit;
+  border-radius: var(--radius);
 
   &.--primary {
     color: var(--colour-neutral-slate);
     background-color: var(--colour-secondary--sky-blue-100);
-    border-radius: var(--radius);
-  }
-}
-
-.features {
-  &__container {
-    @include container;
-
-    row-gap: 3rem;
-    grid-auto-flow: row;
-    margin-top: 7.5rem;
-  }
-
-  &__header {
-    grid-column: 2;
-    display: grid;
-    row-gap: 1.5rem;
-
-    h2 {
-      font-weight: bold;
-      font-size: 2.5rem;
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-
-      color: var(--colour-neutral-onyx);
-    }
-
-    p {
-      line-height: 1.4;
-      max-width: 55%;
-    }
-  }
-
-  &__tiles {
-    grid-column: 2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-
-    li {
-      list-style: none;
-      display: grid;
-
-      align-items: flex-start;
-      grid-template-rows: auto 1fr 1fr;
-
-      padding: 1.5rem 2rem 6rem 2rem;
-
-      &:nth-child(2n) {
-        background-color: var(--colour-neutral-cloud);
-      }
-
-      svg {
-        background: #b7e2f7;
-        box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.05);
-        border-radius: 8px;
-        height: 2.5rem;
-        width: 2.5rem;
-      }
-
-      img {
-        height: 2.5rem;
-        width: 2.5rem;
-      }
-
-      strong {
-        margin-top: 2.5rem;
-        margin-bottom: 1rem;
-
-        font-size: 1.5rem;
-        line-height: 1.2;
-        letter-spacing: -0.02em;
-        color: var(--colour-neutral-onyx);
-      }
-
-      p {
-        font-size: 0.75rem;
-        line-height: 1.4;
-        color: var(--colour-neutral-slate);
-      }
-    }
-  }
-}
-
-.why {
-  &__container {
-    @include container;
-  }
-
-  &__items {
-    grid-column: 2;
-  }
-
-  &-item {
-    &__container {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
-    }
-
-    &__detail {
-      padding: 7rem 4rem;
-
-      strong {
-        font-weight: bold;
-        font-size: 2.5rem;
-        line-height: 1.2;
-        letter-spacing: -0.02em;
-        color: var(--colour-neutral-onyx);
-
-        margin-bottom: 1.5rem;
-        display: block;
-      }
-
-      p {
-        line-height: 1.4;
-
-        margin-bottom: 2rem;
-      }
-
-      ul {
-        display: grid;
-        row-gap: 0.75rem;
-
-        li {
-          list-style-type: none;
-          display: grid;
-          grid-template-columns: auto 1fr;
-          column-gap: 0.5rem;
-          align-items: center;
-
-          p {
-            margin-bottom: 0;
-          }
-        }
-      }
-    }
-
-    &__icon {
-      background-color: var(--colour-secondary--sky-blue-25);
-    }
-  }
-}
-
-.pricing {
-  &__container {
-    @include container;
-
-    row-gap: 3rem;
-    grid-auto-flow: row;
-    margin-top: 7.5rem;
-
-    background-color: var(--colour-secondary--sky-blue-25);
-
-    padding: 5rem 0;
-  }
-
-  &__header {
-    grid-column: 2;
-    display: grid;
-    row-gap: 1.5rem;
-
-    h2 {
-      font-weight: bold;
-      font-size: 2.5rem;
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-
-      color: var(--colour-neutral-onyx);
-    }
-
-    p {
-      line-height: 1.4;
-      max-width: 55%;
-    }
-  }
-
-  &__tiles {
-    grid-column: 2;
-    display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    column-gap: 2rem;
-    row-gap: 2.5rem;
-
-    li {
-      list-style: none;
-      display: grid;
-      align-items: flex-start;
-      grid-template-rows: auto auto 1fr;
-
-      svg {
-        background: #b7e2f7;
-        box-shadow: inset 0px 0px 12px rgba(0, 0, 0, 0.05);
-        border-radius: 8px;
-        height: 2.5rem;
-        width: 2.5rem;
-      }
-
-      img {
-        height: 2.5rem;
-        width: 2.5rem;
-      }
-
-      strong {
-        margin-top: 1.5rem;
-        margin-bottom: 0.5rem;
-
-        line-height: 1.2;
-        color: var(--colour-neutral-onyx);
-      }
-
-      p {
-        font-size: 0.75rem;
-        line-height: 1.4;
-        color: var(--colour-neutral-slate);
-      }
-    }
-  }
-}
-
-.resources {
-  &__container {
-    @include container;
-
-    row-gap: 3rem;
-    grid-auto-flow: row;
-    margin-top: 7.5rem;
-
-    background-color: var(--colour-secondary--sky-blue-25);
-
-    padding: 5rem 0;
-  }
-
-  &__header {
-    grid-column: 2;
-    display: grid;
-    row-gap: 1.5rem;
-
-    h2 {
-      font-weight: bold;
-      font-size: 2.5rem;
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-
-      color: var(--colour-neutral-onyx);
-    }
-
-    p {
-      line-height: 1.4;
-      max-width: 55%;
-    }
-  }
-
-  &__tiles {
-    grid-column: 2;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    column-gap: 2rem;
-    row-gap: 2.5rem;
-
-    li {
-      list-style: none;
-      display: grid;
-
-      background-color: var(--colour-secondary--sky-blue-100);
-      border-radius: var(--radius);
-      padding: 6.25rem 2rem 2rem 2rem;
-      align-items: flex-start;
-
-      grid-template-rows: auto 1fr auto;
-
-      &.--disabled {
-        opacity: 0.4;
-      }
-
-      strong {
-        margin-bottom: 1rem;
-
-        font-size: 1.5rem;
-
-        line-height: 1.2;
-        letter-spacing: -0.02em;
-        color: var(--colour-neutral-onyx);
-      }
-
-      p {
-        margin-bottom: 1.5rem;
-
-        line-height: 1.4;
-        color: var(--colour-neutral-slate);
-      }
-    }
   }
 }
 
@@ -412,4 +45,19 @@ body {
   line-height: 1;
   text-decoration: none;
   border-radius: var(--radius);
+}
+
+a {
+  font-weight: bold;
+  color: var(--colour-primary-green-100);
+}
+
+.input {
+  background: var(--colour-neutral-dark-cloud);
+  border: 1px solid var(--colour-neutral-light-slate-25);
+  border-radius: var(--radius);
+  padding: 10px 14px;
+  display: block;
+  width: 100%;
+  font-size: inherit;
 }
