--- a/components/modules/EarlyAccessForm/_index.scss
+++ b/components/modules/EarlyAccessForm/_index.scss
@@ -43,3 +43,36 @@
     }
   }
 }
+
+.eap-basic {
+  &__container {
+    margin: 8rem 0;
+
+    display: grid;
+    grid-template-columns: 1fr 32rem 1fr;
+
+    h2 {
+      font-size: 2.5rem;
+      line-height: 1.2;
+      letter-spacing: -0.02em;
+      margin-bottom: 1.5rem;
+      text-align: center;
+    }
+
+    & > * {
+      grid-column: 2;
+    }
+  }
+
+  &__form {
+    display: grid;
+    grid-template-columns: 1fr auto;
+    column-gap: 1rem;
+
+    .button {
+      justify-self: start;
+      background-color: var(--colour-primary-green-100);
+      color: white;
+    }
+  }
+}
