--- a/components/modules/EarlyAccessForm/_index.scss
+++ b/components/modules/EarlyAccessForm/_index.scss
@@ -68,6 +68,7 @@
     display: grid;
     grid-template-columns: 1fr auto;
     column-gap: 1rem;
+    align-items: start;
 
     .button {
       justify-self: start;
