--- a/components/modules/IconTiles/_index.scss
+++ b/components/modules/IconTiles/_index.scss
@@ -24,6 +24,10 @@
     p {
       line-height: 1.4;
       max-width: 55%;
+
+      @include mobile {
+        max-width: 100%;
+      }
     }
   }
 
@@ -31,6 +35,10 @@
     grid-column: 2;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
+
+    @include mobile {
+      grid-template-columns: 1fr;
+    }
 
     li {
       list-style: none;
@@ -40,6 +48,10 @@
       grid-template-rows: auto 1fr 1fr;
 
       padding: 1.5rem 2rem 6rem 2rem;
+
+      @include mobile {
+        padding: 2rem;
+      }
 
       &:nth-child(2n) {
         background-color: var(--colour-neutral-cloud);
@@ -107,6 +119,10 @@
     p {
       line-height: 1.4;
       max-width: 55%;
+
+      @include mobile {
+        max-width: 100%;
+      }
     }
   }
 
@@ -116,6 +132,10 @@
     grid-template-columns: repeat(4, 1fr);
     column-gap: 2rem;
     row-gap: 2.5rem;
+
+    @include mobile {
+      grid-template-columns: repeat(2, 1fr);
+    }
 
     li {
       list-style: none;
