--- a/components/modules/EarlyAccessForm/_index.scss
+++ b/components/modules/EarlyAccessForm/_index.scss
@@ -4,10 +4,18 @@
 
     display: grid;
     grid-template-columns: 1fr 26rem 8rem 26rem 1fr;
+
+    @include mobile {
+      grid-template-columns: 1fr;
+    }
   }
 
   &__left {
     grid-column: 2;
+
+    @include mobile {
+      grid-column: auto;
+    }
 
     h2 {
       font-size: 2.5rem;
@@ -27,6 +35,10 @@
     grid-column: 4;
     display: grid;
     row-gap: 1rem;
+
+    @include mobile {
+      grid-column: auto;
+    }
 
     align-items: center;
     align-content: center;
@@ -50,6 +62,10 @@
 
     display: grid;
     grid-template-columns: 1fr 32rem 1fr;
+
+    @include mobile {
+      grid-template-columns: 1fr;
+    }
 
     h2 {
       font-size: 2.5rem;
