--- a/components/Footer/_index.scss
+++ b/components/Footer/_index.scss
@@ -46,6 +46,16 @@
 
       li {
         line-height: 2;
+
+        a {
+          font-weight: inherit;
+          color: inherit;
+          text-decoration: none;
+
+          &:hover {
+            text-decoration: underline;
+          }
+        }
       }
     }
   }
