position hero image

--- a/components/modules/Hero/_index.scss
+++ b/components/modules/Hero/_index.scss
@@ -43,6 +43,15 @@
   }
 
   &__right {
+    position: relative;
+
+    img {
+      max-width: initial;
+      position: absolute;
+      left: -100px;
+      width: 700px;
+    }
+
     @include mobile {
       display: none;
     }
