sizing elements in hero

--- a/components/modules/Hero/_index.scss
+++ b/components/modules/Hero/_index.scss
@@ -39,6 +39,12 @@
       margin-bottom: 1.5rem;
       line-height: 140%;
       letter-spacing: -0.02em;
+
+      width: 90%;
+    }
+
+    form {
+      width: 80%;
     }
   }
 
