--- a/components/Footer/_index.scss
+++ b/components/Footer/_index.scss
@@ -6,6 +6,10 @@
     color: white;
 
     padding: 4rem 0;
+
+    @include mobile {
+      padding: 2.5rem 1.5rem;
+    }
   }
 
   &__content {
@@ -14,8 +18,37 @@
 
   &__cols {
     display: grid;
-    grid-template-columns: repeat(4, auto);
+    grid-template-columns: 1fr 3fr;
     margin-bottom: 4rem;
+
+    @include mobile {
+      margin-bottom: 2.5rem;
+      grid-template-columns: unset;
+      row-gap: 2.5rem;
+      grid-template-areas:
+        "nav"
+        "brand";
+    }
+  }
+
+  &__nav {
+    display: grid;
+    grid-template-columns: repeat(3, auto);
+    column-gap: 1rem;
+    row-gap: 2rem;
+
+    @include mobile {
+      grid-area: nav;
+      grid-template-columns: repeat(2, auto);
+    }
+  }
+
+  &__brand {
+    @include mobile {
+      grid-area: brand;
+      display: grid;
+      justify-content: center;
+    }
   }
 
   &__legal {
@@ -26,6 +59,16 @@
     display: grid;
     grid-auto-flow: column;
     justify-content: space-between;
+
+    @include mobile {
+      grid-auto-flow: row;
+      row-gap: 1rem;
+      justify-items: center;
+
+      p {
+        text-align: center;
+      }
+    }
 
     ul {
       display: grid;
