--- a/components/modules/EarlyAccessForm/_index.scss
+++ b/components/modules/EarlyAccessForm/_index.scss
@@ -7,6 +7,8 @@
 
     @include mobile {
       grid-template-columns: 1fr;
+      margin: 5rem 1.5rem;
+      row-gap: 2rem;
     }
   }
 
@@ -22,6 +24,10 @@
       line-height: 1.2;
       letter-spacing: -0.02em;
       margin-bottom: 1.5rem;
+
+      @include mobile {
+        font-size: 2rem;
+      }
     }
 
     p {
@@ -52,6 +58,10 @@
       justify-self: start;
       background-color: var(--colour-primary-green-100);
       color: white;
+
+      @include mobile {
+        justify-self: stretch;
+      }
     }
   }
 }
@@ -65,6 +75,7 @@
 
     @include mobile {
       grid-template-columns: 1fr;
+      margin: 5rem 1.5rem;
     }
 
     h2 {
@@ -77,6 +88,10 @@
 
     & > * {
       grid-column: 2;
+
+      @include mobile {
+        grid-column: auto;
+      }
     }
   }
 
@@ -90,6 +105,15 @@
       justify-self: start;
       background-color: var(--colour-primary-green-100);
       color: white;
+    }
+
+    @include mobile {
+      grid-template-columns: 1fr;
+      row-gap: 1rem;
+
+      .button {
+        justify-self: stretch;
+      }
     }
   }
 }
