--- a/components/modules/FeatureTiles/_index.scss
+++ b/components/modules/FeatureTiles/_index.scss
@@ -17,6 +17,7 @@
       @include mobile {
         grid-column: auto;
         order: auto;
+        padding: 1.5rem;
       }
 
       strong {
@@ -83,24 +84,26 @@
   .why-item__bleed {
     order: 1;
     grid-column: 1;
+
     @include mobile {
-      order: auto;
-      grid-column: auto;
+      display: none;
     }
   }
   .why-item__icon {
     order: 2;
     grid-column: 2;
+
     @include mobile {
-      order: auto;
+      order: 2;
       grid-column: auto;
     }
   }
   .why-item__detail {
     order: 3;
     grid-column: 3;
+
     @include mobile {
-      order: auto;
+      order: 1;
       grid-column: auto;
     }
   }
