--- a/components/Navbar/_index.scss
+++ b/components/Navbar/_index.scss
@@ -8,31 +8,6 @@
 
   align-items: center;
 
-  &__burger {
-    display: none;
-
-    padding: var(--spacing-3);
-
-    &-toggle {
-      border: none;
-      background: transparent;
-    }
-
-    &-menu {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      bottom: 0;
-      background-color: white;
-
-      &.--active {
-        display: block;
-      }
-    }
-  }
-
   @include mobile {
     grid-template-columns: 1fr auto;
     margin: 0 1rem;
@@ -74,5 +49,77 @@
     @include mobile {
       display: none;
     }
+  }
+}
+
+.navbar__burger {
+  display: none;
+
+  padding: var(--spacing-3);
+
+  &-toggle {
+    border: none;
+    background: transparent;
+  }
+
+  &-menu {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    height: 100vh;
+    width: 100vw;
+    background-color: white;
+    z-index: 10;
+
+    grid-template-rows: auto 1fr auto;
+
+    &.--active {
+      display: grid;
+    }
+  }
+
+  &-brand {
+    svg {
+      width: 8.25rem;
+    }
+  }
+
+  &-header {
+    margin: 0 2rem;
+    margin-top: 4.5rem;
+
+    display: grid;
+    grid-template-columns: 1fr auto;
+    align-items: center;
+  }
+
+  &-links {
+    display: grid;
+    row-gap: 1rem;
+    list-style: none;
+    margin-top: 4.5rem;
+    align-content: flex-start;
+    min-height: 0;
+    overflow: auto;
+
+    li {
+      padding: 0;
+      text-align: center;
+      a {
+        font-size: 1.5rem;
+        line-height: 225%;
+        font-weight: inherit;
+        color: inherit;
+        text-decoration: none;
+      }
+    }
+  }
+
+  .button.--primary {
+    background-color: var(--colour-primary-green-100);
+    color: white;
+    text-align: center;
+    margin: 1.5rem;
   }
 }
