--- a/components/Navbar/_index.scss
+++ b/components/Navbar/_index.scss
@@ -72,7 +72,7 @@
     background-color: white;
     z-index: 10;
 
-    grid-template-rows: auto 1fr auto;
+    grid-template-rows: auto auto auto;
 
     &.--active {
       display: grid;
