--- a/components/Navbar/_index.scss
+++ b/components/Navbar/_index.scss
@@ -72,7 +72,9 @@
     background-color: white;
     z-index: 10;
 
-    grid-template-rows: auto auto auto;
+    grid-template-rows: auto 1fr auto;
+    align-content: flex-start;
+    padding-bottom: 6rem;
 
     &.--active {
       display: grid;
