--- a/components/modules/EarlyAccessForm/_index.scss
+++ b/components/modules/EarlyAccessForm/_index.scss
@@ -4,19 +4,10 @@
 
     display: grid;
     grid-template-columns: 1fr 26rem 8rem 26rem 1fr;
+    align-items: center;
 
-    @include mobile {
-      grid-template-columns: 1fr;
-      margin: 5rem 1.5rem;
-      row-gap: 2rem;
-    }
-  }
-
-  &__left {
-    grid-column: 2;
-
-    @include mobile {
-      grid-column: auto;
+    &.--basic {
+      grid-template-columns: 1fr 32rem 8rem 20rem 1fr;
     }
 
     h2 {
@@ -35,84 +26,90 @@
       color: var(--colour-neutral-slate);
       margin-bottom: 1rem;
     }
-  }
-
-  &__right {
-    grid-column: 4;
-    display: grid;
-    row-gap: 1rem;
-
-    @include mobile {
-      grid-column: auto;
-    }
-
-    align-items: center;
-    align-content: center;
-
-    label {
-      font-weight: bold;
-      display: block;
-    }
-
-    .button {
-      justify-self: start;
-      background-color: var(--colour-primary-green-100);
-      color: white;
-
-      @include mobile {
-        justify-self: stretch;
-      }
-    }
-  }
-}
-
-.eap-basic {
-  &__container {
-    margin: 8rem 0;
-
-    display: grid;
-    grid-template-columns: 1fr 32rem 1fr;
 
     @include mobile {
       grid-template-columns: 1fr;
       margin: 5rem 1.5rem;
+      row-gap: 2rem;
+
+      &.--basic {
+        grid-template-columns: 1fr;
+      }
+    }
+  }
+
+  &__left {
+    grid-column: 2;
+
+    @include mobile {
+      grid-column: auto;
+    }
+  }
+
+  &__right {
+    grid-column: 4;
+
+    svg {
+      transform: translateX(-70px);
+      max-width: 100%;
     }
 
-    h2 {
-      font-size: 2.5rem;
-      line-height: 1.2;
-      letter-spacing: -0.02em;
-      margin-bottom: 1.5rem;
-      text-align: center;
-    }
+    @include mobile {
+      grid-column: auto;
 
-    & > * {
-      grid-column: 2;
-
-      @include mobile {
-        grid-column: auto;
+      svg {
+        transform: none;
       }
     }
   }
 
   &__form {
-    display: grid;
-    grid-template-columns: 1fr auto;
-    column-gap: 1rem;
-    align-items: start;
-
-    .button {
-      justify-self: start;
-      background-color: var(--colour-primary-green-100);
-      color: white;
-    }
-
-    @include mobile {
-      grid-template-columns: 1fr;
+    &.--flow {
+      display: grid;
       row-gap: 1rem;
 
+      @include mobile {
+        grid-column: auto;
+      }
+
+      align-items: center;
+      align-content: center;
+
+      label {
+        font-weight: bold;
+        display: block;
+      }
+
       .button {
-        justify-self: stretch;
+        justify-self: start;
+        background-color: var(--colour-primary-green-100);
+        color: white;
+
+        @include mobile {
+          justify-self: stretch;
+        }
+      }
+    }
+
+    &.--inline {
+      display: grid;
+      grid-template-columns: 1fr auto;
+      column-gap: 1rem;
+      align-items: start;
+
+      .button {
+        justify-self: start;
+        background-color: var(--colour-primary-green-100);
+        color: white;
+      }
+
+      @include mobile {
+        grid-template-columns: 1fr;
+        row-gap: 1rem;
+
+        .button {
+          justify-self: stretch;
+        }
       }
     }
   }
