--- a/components/modules/FeatureTiles/_index.scss
+++ b/components/modules/FeatureTiles/_index.scss
@@ -63,6 +63,12 @@
       order: 2;
       grid-column: 3;
       background-color: var(--colour-secondary--sky-blue-25);
+      display: grid;
+      align-items: center;
+
+      img {
+        transform: translateX(-2rem);
+      }
 
       @include mobile {
         grid-column: auto;
@@ -96,6 +102,11 @@
   .why-item__icon {
     order: 2;
     grid-column: 2;
+
+
+    img {
+      transform: translateX(2rem);
+    }
 
     @include mobile {
       order: 2;
