--- a/components/modules/IconTiles/_index.scss
+++ b/components/modules/IconTiles/_index.scss
@@ -77,8 +77,12 @@
       }
 
       img {
-        height: 2.5rem;
-        width: 2.5rem;
+        height: 5rem;
+        width: 5rem;
+        margin-right: -2.5rem;
+        margin-bottom: -2.5rem;
+        transform: scale(0.5, 0.5) translate(-2.5rem, -2.5rem);
+        // ^ this is a fix for Safari.
       }
 
       strong {
@@ -179,8 +183,12 @@
       }
 
       img {
-        height: 2.5rem;
-        width: 2.5rem;
+        height: 5rem;
+        width: 5rem;
+        margin-right: -2.5rem;
+        margin-bottom: -2.5rem;
+        transform: scale(0.5, 0.5) translate(-2.5rem, -2.5rem);
+        // ^ this is a fix for Safari.
       }
 
       strong {
