--- a/components/Footer/_index.scss
+++ b/components/Footer/_index.scss
@@ -33,7 +33,7 @@
 
   &__nav {
     display: grid;
-    grid-template-columns: repeat(3, auto);
+    grid-template-columns: repeat(3, 1fr);
     column-gap: 1rem;
     row-gap: 2rem;
 
