--- a/components/modules/FeatureTiles/_index.scss
+++ b/components/modules/FeatureTiles/_index.scss
@@ -73,6 +73,11 @@
       @include mobile {
         grid-column: auto;
         order: auto;
+        padding: 2.5rem 1.5rem;
+
+        img {
+          transform: none;
+        }
       }
     }
 
@@ -103,7 +108,6 @@
     order: 2;
     grid-column: 2;
 
-
     img {
       transform: translateX(2rem);
     }
@@ -111,6 +115,10 @@
     @include mobile {
       order: 2;
       grid-column: auto;
+
+      img {
+        transform: none;
+      }
     }
   }
   .why-item__detail {
