--- a/components/Footer/_index.scss
+++ b/components/Footer/_index.scss
@@ -39,7 +39,7 @@
 
     @include mobile {
       grid-area: nav;
-      grid-template-columns: repeat(2, auto);
+      grid-template-columns: repeat(2, 1fr);
     }
   }
 
@@ -82,6 +82,7 @@
     h3 {
       margin-bottom: 1rem;
       font-size: 1rem;
+      line-height: 1.2;
     }
 
     ul {
