--- a/components/modules/IconTiles/_index.scss
+++ b/components/modules/IconTiles/_index.scss
@@ -83,6 +83,15 @@
         margin-bottom: -2.5rem;
         transform: scale(0.5, 0.5) translate(-2.5rem, -2.5rem);
         // ^ this is a fix for Safari.
+
+        @include mobile {
+          height: 6.5rem;
+          width: 6.5rem;
+          margin-right: calc(-1 * (6.5rem / 2));
+          margin-bottom: calc(-1 * (6.5rem / 2));
+          transform: scale(0.5, 0.5)
+            translate(calc(-1 * (6.5rem / 2)), calc(-1 * (6.5rem / 2)));
+        }
       }
 
       strong {
@@ -189,6 +198,15 @@
         margin-bottom: -2.5rem;
         transform: scale(0.5, 0.5) translate(-2.5rem, -2.5rem);
         // ^ this is a fix for Safari.
+
+        @include mobile {
+          height: 6.5rem;
+          width: 6.5rem;
+          margin-right: calc(-1 * (6.5rem / 2));
+          margin-bottom: calc(-1 * (6.5rem / 2));
+          transform: scale(0.5, 0.5)
+            translate(calc(-1 * (6.5rem / 2)), calc(-1 * (6.5rem / 2)));
+        }
       }
 
       strong {
