--- a/components/modules/IconTiles/_index.scss
+++ b/components/modules/IconTiles/_index.scss
@@ -134,7 +134,9 @@
     padding: 5rem 0;
 
     @include mobile {
-      display: none;
+      margin-top: 5rem;
+      row-gap: 2.5rem;
+      padding: 1.5rem;
     }
   }
 
@@ -142,6 +144,10 @@
     grid-column: 2;
     display: grid;
     row-gap: 1.5rem;
+
+    @include mobile {
+      padding: 1.5rem 0;
+    }
 
     h2 {
       font-weight: bold;
@@ -174,7 +180,8 @@
     row-gap: 2.5rem;
 
     @include mobile {
-      grid-template-columns: repeat(2, 1fr);
+      grid-template-columns: none;
+      row-gap: 1.5rem;
     }
 
     li {
@@ -198,15 +205,6 @@
         margin-bottom: -2.5rem;
         transform: scale(0.5, 0.5) translate(-2.5rem, -2.5rem);
         // ^ this is a fix for Safari.
-
-        @include mobile {
-          height: 6.5rem;
-          width: 6.5rem;
-          margin-right: calc(-1 * (6.5rem / 2));
-          margin-bottom: calc(-1 * (6.5rem / 2));
-          transform: scale(0.5, 0.5)
-            translate(calc(-1 * (6.5rem / 2)), calc(-1 * (6.5rem / 2)));
-        }
       }
 
       strong {
@@ -215,6 +213,10 @@
 
         line-height: 1.2;
         color: var(--colour-neutral-onyx);
+
+        @include mobile {
+          margin-top: 1rem;
+        }
       }
 
       p {
