--- a/styles/app.scss
+++ b/styles/app.scss
@@ -20,7 +20,13 @@ img {
 }
 
 @mixin mobile {
-  @media screen and (max-width: 520px) {
+  @media screen and (max-width: 768px) {
+    @content;
+  }
+}
+
+@mixin tablet {
+  @media screen and (max-width: 1024px) {
     @content;
   }
 }
@@ -28,6 +34,10 @@ img {
 @mixin container {
   display: grid;
   grid-template-columns: 1fr 1120px 1fr;
+
+  @include tablet {
+    grid-template-columns: 1fr 900px 1fr;
+  }
 
   @include mobile {
     grid-template-columns: 1fr;
