--- a/styles/app.scss
+++ b/styles/app.scss
@@ -26,7 +26,7 @@ img {
 }
 
 @mixin tablet {
-  @media screen and (max-width: 1024px) {
+  @media screen and (min-width: 769px) and (max-width: 1024px) {
     @content;
   }
 }
