--- a/components/modules/RichText/_index.scss
+++ b/components/modules/RichText/_index.scss
@@ -2,10 +2,19 @@
   &__container {
     @include container;
     grid-template-columns: 1fr 60ch 1fr;
+
+    @include mobile {
+      grid-template-rows: 1fr;
+      margin: 0 1.5rem;
+    }
   }
 
   &__content {
     grid-column: 2;
+
+    @include mobile {
+      grid-column: unset;
+    }
 
     h1 {
       font-size: 1.5rem;
