--- a/components/entries/BlogPost/_index.scss
+++ b/components/entries/BlogPost/_index.scss
@@ -4,6 +4,10 @@
       @include container;
 
       margin: 3rem 0;
+
+      @include mobile {
+        margin: 3rem 1.5rem;
+      }
     }
 
     &-content {
