--- a/components/entries/BlogPost/_index.scss
+++ b/components/entries/BlogPost/_index.scss
@@ -2,6 +2,7 @@
   &__header {
     &-container {
       @include container;
+      grid-template-columns: 1fr 58rem 1fr;
 
       margin: 3rem 0;
 
@@ -11,10 +12,7 @@
     }
 
     &-content {
-      display: grid;
-      row-gap: 1rem;
       grid-column: 2;
-      text-align: center;
 
       time {
         font-size: 0.75rem;
