--- a/components/Navbar/_index.scss
+++ b/components/Navbar/_index.scss
@@ -3,8 +3,9 @@
   display: grid;
   column-gap: var(--spacing-3);
   grid-template-columns: auto 1fr auto;
-  border-radius: var(--radius);
-  box-shadow: 0px 0px 32px #c8f1ff;
+  max-width: 70rem;
+  margin: 0 auto;
+  margin-top: 1.5rem;
 
   align-items: center;
 
