--- a/components/entries/ContentPage/_index.scss
+++ b/components/entries/ContentPage/_index.scss
@@ -2,6 +2,7 @@
   &__header {
     &-container {
       @include container;
+      grid-template-columns: 1fr 58rem 1fr;
 
       margin: 3rem 0;
 
@@ -12,7 +13,6 @@
 
     &-content {
       grid-column: 2;
-      text-align: center;
 
       @include mobile {
         grid-column: unset;
