--- a/components/modules/Hero/_index.scss
+++ b/components/modules/Hero/_index.scss
@@ -11,6 +11,9 @@
 
     .navbar {
       grid-column: 2;
+      box-shadow: 0px 0px 32px #c8f1ff;
+      border-radius: var(--radius);
+      margin-top: 0;
     }
 
     @include mobile {
