--- a/components/modules/Hero/_index.scss
+++ b/components/modules/Hero/_index.scss
@@ -14,6 +14,8 @@
       box-shadow: 0px 0px 32px #c8f1ff;
       border-radius: var(--radius);
       margin-top: 0;
+      margin: unset;
+      max-width: unset;
     }
 
     @include mobile {
