add news listing page

--- a/components/_index.scss
+++ b/components/_index.scss
@@ -1,4 +1,4 @@
-@import "./entries/index";
 @import "./Footer/index";
 @import "./modules/index";
 @import "./Navbar/index";
+@import "./pages/index";
