--- a/components/pages/BlogList/_index.scss
+++ b/components/pages/BlogList/_index.scss
@@ -56,6 +56,9 @@
 
           p {
             grid-row: 2;
+            grid-column-start: 1;
+            grid-column-end: 3;
+            line-height: 1.4;
           }
         }
       }
