--- a/components/modules/RichText/_index.scss
+++ b/components/modules/RichText/_index.scss
@@ -37,11 +37,8 @@
     h2,
     ol,
     ul,
+    p,
     blockquote {
-      margin-bottom: 0.5rem;
-    }
-
-    p {
       margin-bottom: 1.5rem;
     }
 
