--- a/components/pages/BlogList/_index.scss
+++ b/components/pages/BlogList/_index.scss
@@ -54,6 +54,7 @@
           a {
             grid-column: 1;
             grid-row: 1;
+            line-height: 1.4;
           }
 
           time {
