handle links in rte

--- a/components/modules/RichText/_index.scss
+++ b/components/modules/RichText/_index.scss
@@ -56,5 +56,9 @@
       padding-left: 1rem;
       border-left: 2px solid var(--colour-neutral-light-slate-25);
     }
+
+    a {
+      font-weight: normal;
+    }
   }
 }
