added images to modular content (needs work)

--- a/components/modules/_index.scss
+++ b/components/modules/_index.scss
@@ -3,5 +3,6 @@
 @import "./FeatureTiles/index";
 @import "./Hero/index";
 @import "./IconTiles/index";
+@import "./Image/index";
 @import "./ResourceTile/index";
 @import "./RichText/index";
