update blog listing

--- a/components/pages/BlogList/_index.scss
+++ b/components/pages/BlogList/_index.scss
@@ -43,35 +43,57 @@
 
         @include mobile {
           grid-column: unset;
+
+          row-gap: 1rem;
         }
 
         li {
-          display: grid;
-          grid-template-columns: 1fr auto;
-          column-gap: 1rem;
-          row-gap: 0.5rem;
-          align-items: flex-end;
+          border-bottom: 1px solid var(--colour-neutral-light-slate-25);
+          padding-bottom: 2rem;
 
-          a {
-            grid-column: 1;
-            grid-row: 1;
-            line-height: 1.4;
+          @include mobile {
+            padding-bottom: 1rem;
           }
 
-          time {
-            grid-column: 2;
-            grid-row: 1;
-            font-size: 0.75rem;
+          a {
+            font-size: 1.5rem;
+            line-height: 1.8;
+            letter-spacing: -0.02em;
+            margin-bottom: 0.5rem;
+            color: var(--colour-neutral-onyx);
+            text-decoration: none;
+
+            &:hover {
+              text-decoration: underline;
+            }
           }
 
           p {
-            grid-row: 2;
-            grid-column-start: 1;
-            grid-column-end: 3;
-            line-height: 1.4;
+            line-height: 1.5;
+            margin-bottom: 2rem;
+
+            @include mobile {
+              margin-bottom: 1rem;
+            }
+          }
+
+          time {
+            font-weight: bold;
           }
         }
       }
+    }
+  }
+
+  &-item {
+    &__meta {
+      color: var(--colour-neutral-light-slate-100);
+      font-size: var(--font-size-small);
+
+      display: grid;
+      column-gap: 1rem;
+      justify-content: start;
+      grid-auto-flow: column;
     }
   }
 }
