--- a/components/pages/ContentPage/_index.scss
+++ b/components/pages/ContentPage/_index.scss
@@ -14,6 +14,12 @@
     &-content {
       grid-column: 2;
 
+      h1 {
+        font-size: 2.5rem;
+        letter-spacing: -0.02em;
+        color: var(--colour-neutral-onyx);
+      }
+
       @include mobile {
         grid-column: unset;
       }
