--- a/components/pages/BlogList/_index.scss
+++ b/components/pages/BlogList/_index.scss
@@ -14,8 +14,10 @@
     &-content {
       grid-column: 2;
 
-      time {
-        font-size: 0.75rem;
+      h1 {
+        font-size: 2.5rem;
+        letter-spacing: -0.02em;
+        color: var(--colour-neutral-onyx);
       }
 
       @include mobile {
